--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
   "devDependencies": {
     "gh-pages": "^3.2.3"
   },
-  "homepage": "https://github.com/lgfh98/React-TodoMachine"
+  "homepage": "https://github.com/lgfh98/'React-TodoMachine'"
 }
